--- a/_quarto.yml
+++ b/_quarto.yml
@@ -4,11 +4,24 @@ project:
 
 website:
   title: "fusionACS"
+  image: fusionACS_badge.jpg
   navbar:
     left:
-      - href: index.qmd
-        text: Home
-      - about.qmd
+      - text: "About"
+        href: about.qmd    # Links to your About page
+      - text: "Details"
+        href: details.qmd    # Links to your About page
+      - text: "Results"
+        href: results.qmd    # Links to your About page
+      - text: "Team"
+        href: team.qmd    # Links to your Team page
+      - text: "FAQ"
+        href: faq.qmd  # Links to your Contact page
+   author:
+    - name: "Kevin Ummel"
+      affiliation: "Greenspace Analytics"
+      email: "kevin.ummel@yale.edu"
+      github: "https://github.com/ummel"
 
 format:
   html:
