--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,17 +2,21 @@ project:
   type: website
   output-dir: docs
 
+bibliography: references.bib
+
 website:
   title: "fusionACS"
   navbar:
     logo: fusionACS_badge.jpg
     left:
-      - text: "About"
-        href: about.qmd
-      - text: "Details"
-        href: details.qmd
-      - text: "Results"
-        href: results.qmd
+      - text: "Methodology"
+        href: methodology.qmd
+      - text: "Inputs"
+        href: inputs.qmd
+      - text: "Outputs"
+        href: outputs.qmd
+      - text: "Publications"
+        href: publications.qmd
       - text: "Team"
         href: team.qmd
       - text: "FAQ"
@@ -27,4 +31,3 @@ format:
     toc: true
 
 editor: visual
-
