--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,8 +3,10 @@
 export(analyze)
 export(assemble)
 export(dictionary)
+export(get_cores)
 export(get_directory)
 export(get_microdata)
+export(set_cores)
 export(set_directory)
 import(arrow)
 import(collapse)
