--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,17 @@
 Package: fusionACS
-Title: Extensive and high-resolution microdata of U.S. households and individuals
+Title: Extensive and high-resolution microdata of U.S. households and
+    individuals
 Version: 0.0.12
-Authors@R: c(person("Kevin", "Ummel", email = "kevin.ummel@yale.edu", role = c("aut", "cre")))
-Description: This package provides access to data and tools to facilitate otherwise impossible U.S. social survey analyses. A documented pseudo-sample of the underlying fusionACS database is made available, along with functions to allow efficient microdata assembly and analysis. The fusionACS database is the result of statistical fusion of social survey microdata to simulate an extensive and high-resolution survey of U.S. households and individuals (Ummel et al. 2024, Tuccillo et al. 2023).
+Authors@R: 
+    person("Kevin", "Ummel", , "kevin.ummel@yale.edu", role = c("aut", "cre"))
+Description: This package provides access to data and tools to facilitate
+    otherwise impossible U.S. social survey analyses. A documented
+    pseudo-sample of the underlying fusionACS database is made available,
+    along with functions to allow efficient microdata assembly and
+    analysis. The fusionACS database is the result of statistical fusion
+    of social survey microdata to simulate an extensive and
+    high-resolution survey of U.S. households and individuals (Ummel et
+    al. 2024, Tuccillo et al. 2023).
 License: GPL (>= 3)
 URL: https://ummel.github.io/fusionACS, https://github.com/ummel/fusionACS
 Depends: 
@@ -12,12 +21,20 @@ Imports:
     collapse,
     data.table,
     dplyr,
-    parallelly,
     labelled,
+    parallel,
+    parallelly,
     piggyback,
+    purrr,
     rappdirs,
+    rlang,
+    stats,
     stringr,
-    rlang
+    tidyr,
+    utils
+Suggests: 
+    knitr,
+    rmarkdown
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
