--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(get_microdata)
 export(set_cores)
 export(set_directory)
 import(arrow)
+import(cli)
 import(collapse)
 import(data.table, except = c(first, last, between, fdroplevels))
 import(dplyr)
