--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -4,9 +4,10 @@ pkgdown_sha: ~
 articles:
   data: data.html
   faq: faq.html
+  methods: methods.html
   publications: publications.html
   usage: usage.html
-last_built: 2025-07-24T02:41Z
+last_built: 2025-07-25T22:01Z
 urls:
   reference: https://ummel.github.io/fusionACS/reference
   article: https://ummel.github.io/fusionACS/articles
